force-app/main/default/objects/smagicinteract__incoming_lookup_config__c/fields/smagicinteract__incoming_sms_owner__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__incoming_sms_owner__c</fullName>
    <label>Incoming SMS Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>