force-app/main/default/objects/smagicinteract__incoming_lookup_config__c/fields/smagicinteract__MobilePhoneField__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MobilePhoneField__c</fullName>
    <label>Search MobileField Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>