force-app/main/default/objects/smagicinteract__incoming_lookup_config__c/fields/smagicinteract__Notify_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Notify_Record_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Record Owner</label>
    <type>Checkbox</type>
</CustomField>