force-app/main/default/objects/smagicinteract__incoming_lookup_config__c/fields/smagicinteract__objectName__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__objectName__c</fullName>
    <label>Lookup Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>