force-app/main/default/objects/smagicinteract__incoming_lookup_config__c/fields/smagicinteract__ReferenceField__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ReferenceField__c</fullName>
    <label>Reference Name on Incoming Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>